Customize content and some layouts

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,21 +1,17 @@
 ---
 layout: archive
-title: "Publications"
-permalink: /publications/
+title: "Projects"
+permalink: /projects/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
-
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
+<!-- New style rendering if project categories are defined -->
+{% if site.project_category %}
+  {% for category in site.project_category  %}
     {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
+    {% for post in site.projects reversed %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
@@ -27,7 +23,7 @@ author_profile: true
     {% endfor %}
   {% endfor %}
 {% else %}
-  {% for post in site.publications reversed %}
+  {% for post in site.projects reversed %}
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
